--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,7 +184,7 @@ endif ()
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/release)
 
-install(TARGETS fesql_core
+install(TARGETS fesql_core fesql_sdk
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
