--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,11 @@ build:
   artifacts:
     expire_in: 4h
     paths:
+      - fesql/build/release/lib/libfesql_core.a
+      - fesql/build/release/lib/libfesql_sdk.a
+      - fesql/build/src/sdk/libfesql_jsdk_complete.so
+      - fesql/build/src/sdk/libfesql_jsdk_core.so
+      - fesql/build/src/sdk/libfesql_sdk.a
       - build/bin/fedb
       - build/bin/sql_sdk_test
       - build/bin/sql_cluster_test
@@ -237,10 +242,9 @@ fesql_sdk_c++_level_1+:
 c++_ut:
   stage: quick
   script:
-    - source /root/.bashrc && sh tools/install_fesql.sh
     - ln -sf /depends/thirdparty thirdparty
     - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && bash steps/compile.sh
+    - source /root/.bashrc && cd build && cmake -DTESTING_ENABLE=ON .. && make -j5
     - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
   artifacts:
     reports:
