fix: update cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ endif ()
 add_definitions(-DHAVE_STDBOOL_H=1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 option(TESTING_ENABLE "Enable test" OFF)
+option(SDK_TESTING_ENABLE "Enable sdk test" OFF)
 option(TCMALLOC_ENABLE "Enable TCMALLOC" ON)
 option(SQL_PYSDK_ENABLE "Enable sql pysdk" ON)
 option(SQL_JAVASDK_ENABLE "Enable sql javasdk" ON)
