--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ style_check:
 build:
   stage: build
   script:
-    - source /root/.bashrc && sh tools/install_fesql.sh ON
+    - source /root/.bashrc && sh tools/install_fesql.sh
     - ln -sf /depends/thirdparty thirdparty
     - ln -sf /depends/thirdsrc thirdsrc
     - source /root/.bashrc && bash steps/simple_compile.sh
@@ -36,11 +36,6 @@ build:
   artifacts:
     expire_in: 4h
     paths:
-      - fesql/build/release/lib/libfesql_core.a
-      - fesql/build/release/lib/libfesql_sdk.a
-      - fesql/build/src/sdk/libfesql_jsdk_complete.so
-      - fesql/build/src/sdk/libfesql_jsdk_core.so
-      - fesql/build/src/sdk/libfesql_sdk.a
       - build/bin/fedb
       - build/bin/sql_sdk_test
       - build/bin/sql_cluster_test
@@ -244,6 +239,7 @@ c++_ut:
   script:
     - ln -sf /depends/thirdparty thirdparty
     - ln -sf /depends/thirdsrc thirdsrc
+    - source /root/.bashrc && sh tools/install_fesql.sh
     - source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j5
     - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
   artifacts:
