--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ build:
       - build/bin/sql_cluster_test
       - build/src/sdk/libsql_jsdk.so
       - build/sql_pysdk/dist/*.whl
+      - build/python/dist/*.whl
 
 daily_build:
   stage: build
@@ -254,7 +255,7 @@ fesql_auto_test_python:
     - build
 
 fesql_test_python:
-  stage: slow
+  stage: quick
   before_script:
     - mkdir /rambuild
     - mount -t tmpfs -o size=3G tmpfs /rambuild
