--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,8 +3,10 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-16.04
+    uses: 4paradigm/HybridSErelease@opensource_1.0.0.0
     steps:
       -
         run: |
           echo "test"
           ls -al
+          pwd
