--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,11 +1,29 @@
 name: FEDB-CICD
 on: [push, pull_request]
+env:
+  GIT_SUBMODULE_STRATEGY: recursive
 jobs:
+  style_check:
+    steps:
+      - run: source /root/.bashrc && bash tools/style_check.sh
   build:
-    runs-on: ubuntu-16.04
+    container: centos7
     steps:
       -
         run: |
-          echo "test"
-          ls -al ..
-          pwd
+          source /root/.bashrc && sh tools/install_fesql.sh
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc && bash steps/simple_compile.sh
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-artifact
+          path: |
+            build/bin/rtidb
+            build/bin/sql_sdk_test
+            build/bin/sql_cluster_test
+            build/bin/tablet_engine_test
+            build/src/sdk/libsql_jsdk.so
+            build/sql_pysdk/dist/*.whl
+            build/python/dist/*.whl
+          retention-days: 1
