add style_check and build

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,6 +4,7 @@ env:
   GIT_SUBMODULE_STRATEGY: recursive
 jobs:
   style_check:
+    container: centos7
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
