--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -4,10 +4,12 @@ env:
   GIT_SUBMODULE_STRATEGY: recursive
 jobs:
   style_check:
+    runs-on: ubuntu-16.04
     container: centos7
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
+    runs-on: ubuntu-16.04
     container: centos7
     steps:
       -
