--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,12 +5,12 @@ env:
 jobs:
   style_check:
     runs-on: ubuntu-16.04
-    container: centos7
+#    container: centos7
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
     runs-on: ubuntu-16.04
-    container: centos7
+    container: centos:7
     steps:
       -
         run: |
