--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,19 +5,19 @@ env:
 jobs:
   style_check:
     runs-on: ubuntu-16.04
-#    container: centos7
+    container: centos:7
     steps:
-      - run: sh tools/style_check.sh
+      - run: source /root/.bashrc && bash tools/style_check.sh
   build:
     runs-on: ubuntu-16.04
     container: centos:7
     steps:
       -
         run: |
-          source sh tools/install_fesql.sh
+          source /root/.bashrc && sh tools/install_fesql.sh
           ln -sf /depends/thirdparty thirdparty
           ln -sf /depends/thirdsrc thirdsrc
-          source sh steps/simple_compile.sh
+          source /root/.bashrc && bash steps/simple_compile.sh
       - uses: actions/upload-artifact@v2
         with:
           name: build-artifact
