--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,12 +5,12 @@ env:
 jobs:
   style_check:
     runs-on: ubuntu-latest
-    container: centos6_gcc7_hybridsql:latest
+    container: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
     runs-on: ubuntu-latest
-    container: centos6_gcc7_hybridsql:latest
+    container: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
     steps:
       -
         run: |
