add style_check and build

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,7 @@ name: FEDB-CICD
 on: [push, pull_request]
 env:
   GIT_SUBMODULE_STRATEGY: recursive
-  CR_PAT: ${{ secrets.CR_PAT }}
+  CR_PAT: 1cf68583e36cf11ebcd22a10333247e0298347e4
 jobs:
   test:
     runs-on: ubuntu-latest
