--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "CR_PAT:$CR_PAT"
+      - name: Log into registry
+        run: echo "$CR_PAT" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
   style_check:
     runs-on: ubuntu-latest
     container: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
