add style_check and build

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,8 @@ name: FEDB-CICD
 on: [push, pull_request]
 env:
   GIT_SUBMODULE_STRATEGY: recursive
-  CR_PAT: 1cf68583e36cf11ebcd22a10333247e0298347e4
+  IMAGE_USER: wuyou10206
+  IMAGE_PWD: 1cf68583e36cf11ebcd22a10333247e0298347e4
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -12,7 +13,11 @@ jobs:
         run: echo "$CR_PAT" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
   style_check:
     runs-on: ubuntu-latest
-    container: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
+      credentials:
+        username: $IMAGE_USER
+        password: $IMAGE_PWD
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
