add style_check and build

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,6 +18,7 @@ jobs:
       credentials:
         username: ${{ github.actor }}
 #        password: zw@1020688
+        CR_PAT: 1cf68583e36cf11ebcd22a10333247e0298347e4
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
