--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,7 +17,7 @@ jobs:
       image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
       credentials:
         username: ${{ github.actor }}
-        password: pwd-zw.txt
+        password: 1cf68583e36cf11ebcd22a10333247e0298347e4
     steps:
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
