--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,8 +17,9 @@ jobs:
       image: ghcr.io/4paradigm/centos6_gcc7_hybridsql:latest
       credentials:
         username: ${{ github.actor }}
-        password: 1cf68583e36cf11ebcd22a10333247e0298347e4
+        password: $CR_PAT
     steps:
+      - run: ls -al
       - run: source /root/.bashrc && bash tools/style_check.sh
   build:
     runs-on: ubuntu-latest
