--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,6 +16,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.CR_PAT_ZW }}
     steps:
+      - name: git_enable
+        run: source /opt/rh/sclo-git25/enable
       - uses: actions/checkout@v2
         with:
           submodules: true
@@ -32,7 +34,7 @@ jobs:
         password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - name: git_enable
-        run: source /opt/rh/git-sclo-git25/enable
+        run: source /opt/rh/sclo-git25/enable
       - uses: actions/checkout@v2
         with:
           submodules: true
