--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cmake-modules"]
 	path = cmake-modules
 	url = https://github.com/bilke/cmake-modules.git
+[submodule "fesql"]
+	path = fesql
+	url = https://github.com/4paradigm/HybridSE.git
