--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,6 +23,7 @@ jobs:
 #          submodules: true
       - name: update submodule
         run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
           git submodule init
           git submodule update
       -
