--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -45,9 +45,10 @@ jobs:
 #          submodules: true
       -
         run: |
-          cd fesql
+#          cd fesql
           ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
-          git pull
+#          git pull
+          git clone https://wuyou10206:zw%401020688@github.com/4paradigm/HybridSE.git fesql
           ls -al
 #          cd ..
 #          source /root/.bashrc && sh tools/install_fesql.sh
