--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,7 +47,7 @@ jobs:
         run: |
           ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
           git clone https://wuyou10206:zw%401020688@github.com/4paradigm/HybridSE.git fesql
-          ls -al
+          ls -al fesql
 #          cd ..
 #          source /root/.bashrc && sh tools/install_fesql.sh
 #          ln -sf /depends/thirdparty thirdparty
