--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -48,11 +48,10 @@ jobs:
           ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
           git clone https://wuyou10206:zw%401020688@github.com/4paradigm/HybridSE.git fesql
           ls -al fesql
-#          cd ..
-#          source /root/.bashrc && sh tools/install_fesql.sh
-#          ln -sf /depends/thirdparty thirdparty
-#          ln -sf /depends/thirdsrc thirdsrc
-#          source /root/.bashrc && bash steps/simple_compile.sh
+          source /root/.bashrc && sh tools/install_fesql.sh
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc && bash steps/simple_compile.sh
       - uses: actions/upload-artifact@v2
         with:
           name: build-artifact
