--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -52,10 +52,12 @@ jobs:
         run: |
            tar -zxvf /depends/thirdparty.tar.gz -C /depends/
            mv /depends/depends/thirdparty /depends/thirdparty
+           ls -al /depends/thirdparty
       - name: build fesql
         run: source /root/.bashrc && sh tools/install_fesql.sh
       - name: build fedb
         run: |
+          ls -al
           ln -sf /depends/thirdparty thirdparty
           ln -sf /depends/thirdsrc thirdsrc
           source /root/.bashrc && bash steps/simple_compile.sh
