cmake debug info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,6 +190,8 @@ message (STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
 
 FILE(GLOB header_files "${CMAKE_CURRENT_SOURCE_DIR}/src/include/*")
 FILE(GLOB proto_header_files "${CMAKE_BINARY_DIR}/src/proto/*.pb.h")
+message("CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}")
+message("proto_header_files ${proto_header_files}")
 INSTALL(DIRECTORY ${header_files} DESTINATION include)
 INSTALL(FILES ${proto_header_files} DESTINATION include/proto/)
 install(TARGETS fesql_core fesql_sdk
