--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,6 +47,7 @@ jobs:
         run: yum update -y nss curl libcurl
       - name: update submodule
         run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
           git submodule init
           git submodule update
 #      - name: clone fesql
