--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -19,7 +19,11 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-    container: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT }}
 
     steps:
     - uses: actions/checkout@v1
@@ -47,7 +51,6 @@ jobs:
       run: |
         make fesql_proto && make fesql_parser
         make -j$(nproc)
-        make test -j$(nproc)
         # cmake --build . --config $BUILD_TYPE
 
     - name: Test
@@ -55,4 +58,6 @@ jobs:
       shell: bash
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
+      run: |
+        # ctest -C $BUILD_TYPE
+        make test -j$(nproc)
