--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -55,8 +55,10 @@ jobs:
           ln -sf /depends/thirdsrc thirdsrc
           source /root/.bashrc && bash steps/simple_compile.sh
       - run: |
+          pwd
           ls -al build
           ls -al build/bin
+          ls -al build/bin/fedb
           ls -al build/src/sdk/
           ls -al build/sql_pysdk/
           ls -al build/python/dist/
@@ -64,11 +66,8 @@ jobs:
         with:
           name: build-artifact
           path: |
-            build/bin/fedb
-            build/bin/sql_sdk_test
-            build/bin/sql_cluster_test
-            build/bin/tablet_engine_test
-            build/src/sdk/libsql_jsdk.so
-            build/sql_pysdk/dist/*.whl
-            build/python/dist/*.whl
-          retention-days: 1
+            build/bin/
+            build/src/sdk/
+            build/sql_pysdk/dist/
+            build/python/dist/
+#          retention-days: 1
