--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -66,8 +66,8 @@ jobs:
         with:
           name: build-artifact
           path: |
-            build/bin/
-            build/src/sdk/
-            build/sql_pysdk/dist/
-            build/python/dist/
+            /__w/fedb/fedb/build/bin
+            /__w/fedb/fedb/build/src/sdk
+            build/sql_pysdk/dist
+            build/python/dist
 #          retention-days: 1
