--- a/.github/workflows/dailybuild.yaml
+++ b/.github/workflows/dailybuild.yaml
@@ -1,77 +1,54 @@
-#name: FEDB-Dailybuild
-#on:
-#  schedule:
-#    - cron: '*/1 * * * *'
-#env:
-#  GIT_SUBMODULE_STRATEGY: recursive
-#jobs:
-#  style_check:
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.CR_PAT_ZW }}
-#    steps:
-#      - uses: actions/checkout@v1
-#        with:
-#          ref: 'main'
-##          submodules: true
-#      - name: update nss
-#        run: yum update -y nss curl libcurl
-#      - name: update submodule
+name: FEDB-Dailybuild
+on:
+  schedule:
+    - cron: '*/1 * * * *'
+env:
+  GIT_SUBMODULE_STRATEGY: recursive
+  build:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT_ZW }}
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          ref: 'main'
+#          submodules: true
+      - name: update nss
+        run: yum update -y nss curl libcurl
+      - name: update submodule
+        run: |
+          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
+          git submodule init
+          git submodule update
+          cd fesql
+          git checkout main
+          git pull
+          cd ..
+#      - name: tar thirdparty
 #        run: |
-#          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
-#          git submodule init
-#          git submodule update
-##          echo "commitId：${{ github.event.head_commit.id }}"
-#      - name: style_check
-#        run: source /root/.bashrc && bash tools/style_check.sh
-#  build:
-#    needs: [style_check]
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.CR_PAT_ZW }}
-#    steps:
-#      - uses: actions/checkout@v1
-##        with:
-##          submodules: true
-#      - name: update nss
-#        run: yum update -y nss curl libcurl
-#      - name: update submodule
-#        run: |
-#          ln -s /opt/rh/sclo-git25/root/usr/bin/git /usr/local/bin/git
-#          git submodule init
-#          git submodule update
-##      - name: tar thirdparty
-##        run: |
-##           tar -zxvf /depends/thirdparty.tar.gz -C /depends/
-##           mv /depends/depends/thirdparty /depends/
-#      - name: build fesql
-#        run: source /root/.bashrc && bash tools/install_fesql.sh
-#      - name: build fedb
-#        run: |
-#          ln -sf /depends/thirdparty thirdparty
-#          ln -sf /depends/thirdsrc thirdsrc
-#          source /root/.bashrc && bash steps/simple_compile.sh
-#      - run: |
-#          ls -al build
-#          ls -al build/bin
-#          ls -al build/src/sdk/
-#          ls -al build/sql_pysdk/
-#          ls -al build/python/dist/
-#      - uses: actions/upload-artifact@v1
-#        with:
-#          name: build-artifact
-#          path: |
-#            build/bin/fedb
-#            build/bin/sql_sdk_test
-#            build/bin/sql_cluster_test
-#            build/bin/tablet_engine_test
-#            build/src/sdk/libsql_jsdk.so
-#            build/sql_pysdk/dist/*.whl
-#            build/python/dist/*.whl
-#          retention-days: 1
+#           tar -zxvf /depends/thirdparty.tar.gz -C /depends/
+#           mv /depends/depends/thirdparty /depends/
+      - name: build fesql
+        run: source /root/.bashrc && bash tools/install_fesql.sh
+      - name: build fedb
+        run: |
+          ln -sf /depends/thirdparty thirdparty
+          ln -sf /depends/thirdsrc thirdsrc
+          source /root/.bashrc && bash steps/simple_compile.sh
+      - run: |
+          ls -al build
+          ls -al build/bin
+          ls -al build/src/sdk/
+          ls -al build/sql_pysdk/
+          ls -al build/python/dist/
+      - uses: actions/upload-artifact@v1
+        with:
+          name: build-artifact
+          path: |
+            build/bin/
+            build/src/sdk/
+            build/sql_pysdk/dist/
+            build/python/dist/
