--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -28,22 +28,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory build
-
     - name: Build
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
       shell: bash
-      working-directory: build
-      # Note the current convention is to use the -S and -B options here to specify source
-      # and build directories, but this is only available with CMake 3.13 and higher.
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: |
-        source /etc/profile
-        cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBENCHMARK_ENABLE_LTO=true -DCOVERAGE_ENABLE=OFF -DTESTING_ENABLE=ON -DJAVASDK_ENABLE=OFF -DPYSDK_ENABLE=OFF
-        make fesql_proto && make fesql_parser
-        make -j$(nproc)
-        make test -j$(nproc)
+        ./tools/init_env.profile.sh
+        ./tools/compile_and_test.sh
