--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        ./tools/init_env.profile.sh
-        ./tools/compile_and_test.sh
+        bash -x tools/init_env.profile.sh
+        bash -x tools/compile_and_test.sh
