--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,21 +2,14 @@ name: FEDB-CICD
 on: [push, pull_request]
 env:
   GIT_SUBMODULE_STRATEGY: recursive
-defaults:
-  runs-on: ubuntu-latest
-  container:
-    image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-    credentials:
-      username: ${{ github.actor }}
-      password: ${{ secrets.CR_PAT_ZW }}
 jobs:
   style_check:
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.CR_PAT_ZW }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
 #        with:
@@ -33,12 +26,12 @@ jobs:
         run: source /root/.bashrc && bash tools/style_check.sh
   build:
     needs: [style_check]
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
-#      credentials:
-#        username: ${{ github.actor }}
-#        password: ${{ secrets.CR_PAT_ZW }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/centos6_gcc7_fesql:0.0.1-legacy
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.CR_PAT_ZW }}
     steps:
       - uses: actions/checkout@v1
 #        with:
@@ -72,9 +65,38 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: build-artifact
-          path: |
-            /__w/fedb/fedb/build/bin
-            /__w/fedb/fedb/build/src/sdk
-            build/sql_pysdk/dist
-            build/python/dist
+          path: build/bin
+#            /__w/fedb/fedb/build/src/sdk
+#            build/sql_pysdk/dist
+#            build/python/dist
 #          retention-days: 1
+
+#  c++_ut:
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#c++_ut:
+#  stage: quick
+#  script:
+#    - ln -sf /depends/thirdparty thirdparty
+#    - ln -sf /depends/thirdsrc thirdsrc
+#    - source /root/.bashrc && sh tools/install_fesql.sh
+#    - source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j5 && cd ../
+#    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
+#  artifacts:
+#    reports:
+#      junit:
+#        - reports/*.xml
+#  dependencies:
+#    - build
+#  except:
+#    variables:
+#      - $ENV_BUILD == "daily"
