--- a/.github/workflows/dailybuild.yaml
+++ b/.github/workflows/dailybuild.yaml
@@ -48,37 +48,4 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: build-artifact
-          path: |
-            build/bin
-            build/src/sdk
-            build/sql_pysdk/dist
-            build/python/dist
-#  c++_ut:
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#c++_ut:
-#  stage: quick
-#  script:
-#    - ln -sf /depends/thirdparty thirdparty
-#    - ln -sf /depends/thirdsrc thirdsrc
-#    - source /root/.bashrc && sh tools/install_fesql.sh
-#    - source /root/.bashrc && cd build && cmake -DSQL_PYSDK_ENABLE=OFF -DSQL_JAVASDK_ENABLE=OFF .. && make -j5 && cd ../
-#    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
-#  artifacts:
-#    reports:
-#      junit:
-#        - reports/*.xml
-#  dependencies:
-#    - build
-#  except:
-#    variables:
-#      - $ENV_BUILD == "daily"
+          path: build/
